--- a/template/projects.html
+++ b/template/projects.html
@@ -69,6 +69,26 @@
               <div>MERN</div>
             </div>
           </a>
+          <a class="project-card" target="_blank" href="https://forkify-software-engineering.netlify.app/">
+            <div class="project-cat-img">
+              <div class="project-cat">Food</div>
+              <div><img src="../static/imgs/forkify.jpg" alt="Food"></div>
+            </div>
+            <div class="project-output">Web Development</div>
+            <div class="prj-desc">A website for representing different types of recipes and their ingredients with quantity.</div>
+            <div class="start-date">
+              <div>Start Date</div>
+              <div>24 May, 2021</div>
+            </div>
+            <div class="prj-status">
+              <div>Status</div>
+              <div class="done">Completed</div>
+            </div>
+            <div class="project-tech">
+              <div>Technology</div>
+              <div>Javascript</div>
+            </div>
+          </a>
           <a class="project-card" target="_blank" href="https://www.figma.com/proto/8SLmhQhKEmUG1gEKBptE3u/GyanDaan-Project?page-id=0%3A1&node-id=21%3A111&starting-point-node-id=21%3A111&scaling=scale-down">
             <div class="project-cat-img">
               <div class="project-cat">Education</div>
