--- a/template/projects.html
+++ b/template/projects.html
@@ -34,7 +34,7 @@
               <div class="project-cat">E-commerce</div>
               <div><img src="../static/imgs/bazarpur.jpg" alt="E-commerce"></div>
             </div>
-            <div class="project-output">Web Development</div>
+            <div class="project-output">UI/UX Design</div>
             <div class="prj-desc">A hyper-local e-commerce business model based website to represent local market virtually.</div>
             <div class="start-date">
               <div>Start Date</div>
@@ -42,7 +42,7 @@
             </div>
             <div class="prj-status">
               <div>Status</div>
-              <div class="done">Completed</div>
+              <div class="run">Running</div>
             </div>
             <div class="project-tech">
               <div>Technology</div>
@@ -54,7 +54,7 @@
               <div class="project-cat">Blog</div>
               <div><img src="../static/imgs/waymore.jpg" alt="Blog"></div>
             </div>
-            <div class="project-output">UI/UX Design</div>
+            <div class="project-output">Web Development</div>
             <div class="prj-desc">A Beautiful website for content creators and daily readers to deliver thoughts among each other.</div>
             <div class="start-date">
               <div>Start Date</div>
@@ -67,26 +67,6 @@
             <div class="project-tech">
               <div>Technology</div>
               <div>MERN</div>
-            </div>
-          </a>
-          <a class="project-card" target="_blank" href="https://forkify-software-engineering.netlify.app/">
-            <div class="project-cat-img">
-              <div class="project-cat">Food</div>
-              <div><img src="../static/imgs/forkify.jpg" alt="Food"></div>
-            </div>
-            <div class="project-output">Web Development</div>
-            <div class="prj-desc">A website for representing different types of recipes and their ingredients with quantity.</div>
-            <div class="start-date">
-              <div>Start Date</div>
-              <div>24 May, 2021</div>
-            </div>
-            <div class="prj-status">
-              <div>Status</div>
-              <div class="done">Completed</div>
-            </div>
-            <div class="project-tech">
-              <div>Technology</div>
-              <div>Javascript</div>
             </div>
           </a>
           <a class="project-card" target="_blank" href="https://www.figma.com/proto/8SLmhQhKEmUG1gEKBptE3u/GyanDaan-Project?page-id=0%3A1&node-id=21%3A111&starting-point-node-id=21%3A111&scaling=scale-down">
@@ -107,6 +87,26 @@
             <div class="project-tech">
               <div>Technology</div>
               <div>Design</div>
+            </div>
+          </a>
+          <a class="project-card" target="_blank" href="https://forkify-software-engineering.netlify.app/">
+            <div class="project-cat-img">
+              <div class="project-cat">Food</div>
+              <div><img src="../static/imgs/forkify.jpg" alt="Food"></div>
+            </div>
+            <div class="project-output">Web Development</div>
+            <div class="prj-desc">A website for representing different types of recipes and their ingredients with quantity.</div>
+            <div class="start-date">
+              <div>Start Date</div>
+              <div>24 May, 2021</div>
+            </div>
+            <div class="prj-status">
+              <div>Status</div>
+              <div class="done">Completed</div>
+            </div>
+            <div class="project-tech">
+              <div>Technology</div>
+              <div>Javascript</div>
             </div>
           </a>
           <a class="project-card" target="_blank" href="https://www.figma.com/proto/OV8wBlCiFR8bnFy8RgiZnw/Untitled?page-id=0%3A1&node-id=17%3A0">
