--- a/template/about.html
+++ b/template/about.html
@@ -148,7 +148,7 @@
                     <div><img src="../static/icons/calender.svg" alt="calender" /></div>
                     <div>2019-23</div>
                   </div>
-                  <div class="percentile">7.39</div>
+                  <div class="percentile">7.35</div>
                 </div>
               </div>
             </div>
@@ -217,11 +217,24 @@
               <img src="../static/icons/smart-icon.svg" alt="smart-icon" />
             </div>
             <div class="achieve-info">
+              <div class="achv-name">Front-end Development Using React-Redux</div>
+              <div class="achv-place">Flabs | Pathology Software - Intern</div>
+              <div class="exp-date">
+                <div><img src="../static/icons/calender.svg" alt="calender" /></div>
+                <div class="date-exp-show"><span class="start-date">June 2023</span> - <span class="end-date">Oct 2023</span></div>
+              </div>
+            </div>
+          </div>
+          <div class="achieve-card">
+            <div class="smart-icon">
+              <img src="../static/icons/smart-icon.svg" alt="smart-icon" />
+            </div>
+            <div class="achieve-info">
               <div class="achv-name">API Development Using FastAPI-Python</div>
               <div class="achv-place">Decimal Point Analytics - Intern</div>
               <div class="exp-date">
                 <div><img src="../static/icons/calender.svg" alt="calender" /></div>
-                <div class="date-exp-show"><span class="start-date">June 2022</span> - <span class="end-date">Present</span></div>
+                <div class="date-exp-show"><span class="start-date">June 2022</span> - <span class="end-date">July 2022</span></div>
               </div>
             </div>
           </div>
