--- a/template/skills.html
+++ b/template/skills.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rakesh Soni | Home</title>
     <link rel="stylesheet" href="../static/styles/style.css" />
-    <link rel="stylesheet" href="../static/styles/skills.css">
+    <link rel="stylesheet" href="../static/styles/skills.css" />
   </head>
   <body>
     <!-- Navbar -->
@@ -30,132 +30,193 @@
         <h2>My Skills</h2>
         <div class="skills-wrapper">
           <div class="skills-card">
-            <div class="percent" style="--clr:#F7DF1E; --angle:90">
+            <div class="percent" style="--clr: #f24e1e; --angle: 80">
               <div class="dot"></div>
               <svg>
                 <circle cx="70" cy="70" r="70"></circle>
                 <circle cx="70" cy="70" r="70"></circle>
               </svg>
               <div class="number">
-                <div><img src="../static/icons/javascript.svg" alt="JavaScript"></div>
-                <p>Javascript</p>
-              </div>
-            </div>
-          </div>
-          <div class="skills-card">
-            <div class="percent" style="--clr:#3876AA; --angle:60">
-              <div class="dot"></div>
-              <svg>
-                <circle cx="70" cy="70" r="70"></circle>
-                <circle cx="70" cy="70" r="70"></circle>
-              </svg>
-              <div class="number">
-                <div><img src="../static/icons/python.svg" alt="Python"></div>
-                <p>Python</p>
-              </div>
-            </div>
-          </div>
-          <div class="skills-card">
-            <div class="percent" style="--clr:#00D8FF; --angle:30">
-              <div class="dot"></div>
-              <svg>
-                <circle cx="70" cy="70" r="70"></circle>
-                <circle cx="70" cy="70" r="70"></circle>
-              </svg>
-              <div class="number">
-                <div><img src="../static/icons/React-js.svg" alt="React"></div>
-                <p>React</p>
-              </div>
-            </div>
-          </div>
-          <div class="skills-card">
-            <div class="percent" style="--clr:#F24E1E; --angle:95">
-              <div class="dot"></div>
-              <svg>
-                <circle cx="70" cy="70" r="70"></circle>
-                <circle cx="70" cy="70" r="70"></circle>
-              </svg>
-              <div class="number">
-                <div><img src="../static/icons/html.svg" alt="HTML"></div>
-                <p>HTML</p>
-              </div>
-            </div>
-          </div>
-          <div class="skills-card">
-            <div class="percent" style="--clr:#00758F; --angle:40">
-              <div class="dot"></div>
-              <svg>
-                <circle cx="70" cy="70" r="70"></circle>
-                <circle cx="70" cy="70" r="70"></circle>
-              </svg>
-              <div class="number">
-                <div><img src="../static/icons/mysql.svg" alt="MySQL"></div>
-                <p>MySQL</p>
-              </div>
-            </div>
-          </div>
-          <div class="skills-card">
-            <div class="percent" style="--clr:#539F44; --angle:75">
-              <div class="dot"></div>
-              <svg>
-                <circle cx="70" cy="70" r="70"></circle>
-                <circle cx="70" cy="70" r="70"></circle>
-              </svg>
-              <div class="number">
-                <div><img src="../static/icons/nodejs.svg" alt="NodeJS"></div>
-                <p>NodeJS</p>
-              </div>
-            </div>
-          </div>
-          <div class="skills-card">
-            <div class="percent" style="--clr:#F24E1E; --angle:80">
-              <div class="dot"></div>
-              <svg>
-                <circle cx="70" cy="70" r="70"></circle>
-                <circle cx="70" cy="70" r="70"></circle>
-              </svg>
-              <div class="number">
-                <div><img src="../static/icons/cpp.svg" alt="CPP"></div>
+                <div><img src="../static/icons/cpp.svg" alt="CPP" /></div>
                 <p>C++</p>
               </div>
             </div>
           </div>
           <div class="skills-card">
-            <div class="percent" style="--clr:#333; --angle:75">
+            <div class="percent" style="--clr: #3876aa; --angle: 45">
               <div class="dot"></div>
               <svg>
                 <circle cx="70" cy="70" r="70"></circle>
                 <circle cx="70" cy="70" r="70"></circle>
               </svg>
               <div class="number">
-                <div><img src="../static/icons/UX.svg" alt="UI/UX"></div>
-                <p>UI/UX</p>
+                <div><img src="../static/icons/python.svg" alt="Python" /></div>
+                <p>Python</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="skills-card">
+            <div class="percent" style="--clr: #f24e1e; --angle: 100">
+              <div class="dot"></div>
+              <svg>
+                <circle cx="70" cy="70" r="70"></circle>
+                <circle cx="70" cy="70" r="70"></circle>
+              </svg>
+              <div class="number">
+                <div><img src="../static/icons/html.svg" alt="HTML" /></div>
+                <p>HTML</p>
               </div>
             </div>
           </div>
           <div class="skills-card">
-            <div class="percent" style="--clr:#F24E1E; --angle:88">
+            <div class="percent" style="--clr: #f24e1e; --angle: 95">
               <div class="dot"></div>
               <svg>
                 <circle cx="70" cy="70" r="70"></circle>
                 <circle cx="70" cy="70" r="70"></circle>
               </svg>
               <div class="number">
-                <div><img src="../static/icons/css.svg" alt="CSS"></div>
+                <div><img src="../static/icons/css.svg" alt="CSS" /></div>
                 <p>CSS</p>
               </div>
             </div>
           </div>
           <div class="skills-card">
-            <div class="percent" style="--clr:#429745; --angle:68">
+            <div class="percent" style="--clr: #f7df1e; --angle: 95">
               <div class="dot"></div>
               <svg>
                 <circle cx="70" cy="70" r="70"></circle>
                 <circle cx="70" cy="70" r="70"></circle>
               </svg>
               <div class="number">
-                <div><img src="../static/icons/mongodb.svg" alt="Mongo DB"></div>
+                <div>
+                  <img src="../static/icons/javascript.svg" alt="JavaScript" />
+                </div>
+                <p>Javascript</p>
+              </div>
+            </div>
+          </div>
+          <div class="skills-card">
+            <div class="percent" style="--clr: #00d8ff; --angle: 80">
+              <div class="dot"></div>
+              <svg>
+                <circle cx="70" cy="70" r="70"></circle>
+                <circle cx="70" cy="70" r="70"></circle>
+              </svg>
+              <div class="number">
+                <div>
+                  <img src="../static/icons/React-js.svg" alt="React" />
+                </div>
+                <p>React</p>
+              </div>
+            </div>
+          </div>
+          <div class="skills-card">
+            <div class="percent" style="--clr: #764abc; --angle: 54">
+              <div class="dot"></div>
+              <svg>
+                <circle cx="70" cy="70" r="70"></circle>
+                <circle cx="70" cy="70" r="70"></circle>
+              </svg>
+              <div class="number">
+                <div><img src="../static/icons/redux.svg" alt="Redux" /></div>
+                <p>Redux</p>
+              </div>
+            </div>
+          </div>
+          <div class="skills-card">
+            <div class="percent" style="--clr: #539f44; --angle: 75">
+              <div class="dot"></div>
+              <svg>
+                <circle cx="70" cy="70" r="70"></circle>
+                <circle cx="70" cy="70" r="70"></circle>
+              </svg>
+              <div class="number">
+                <div><img src="../static/icons/nodejs.svg" alt="NodeJS" /></div>
+                <p>NodeJS</p>
+              </div>
+            </div>
+          </div>
+          <div class="skills-card">
+            <div class="percent" style="--clr: #429745; --angle: 68">
+              <div class="dot"></div>
+              <svg>
+                <circle cx="70" cy="70" r="70"></circle>
+                <circle cx="70" cy="70" r="70"></circle>
+              </svg>
+              <div class="number">
+                <div>
+                  <img src="../static/icons/mongodb.svg" alt="Mongo DB" />
+                </div>
                 <p>Mongo DB</p>
+              </div>
+            </div>
+          </div>
+          <div class="skills-card">
+            <div class="percent" style="--clr: #00758f; --angle: 40">
+              <div class="dot"></div>
+              <svg>
+                <circle cx="70" cy="70" r="70"></circle>
+                <circle cx="70" cy="70" r="70"></circle>
+              </svg>
+              <div class="number">
+                <div><img src="../static/icons/mysql.svg" alt="MySQL" /></div>
+                <p>MySQL</p>
+              </div>
+            </div>
+          </div>
+          <div class="skills-card">
+            <div class="percent" style="--clr: #f03c2e; --angle: 60">
+              <div class="dot"></div>
+              <svg>
+                <circle cx="70" cy="70" r="70"></circle>
+                <circle cx="70" cy="70" r="70"></circle>
+              </svg>
+              <div class="number">
+                <div><img src="../static/icons/git.svg" alt="Git" /></div>
+                <p>Git</p>
+              </div>
+            </div>
+          </div>
+          <div class="skills-card">
+            <div class="percent" style="--clr: #4386ec; --angle: 86">
+              <div class="dot"></div>
+              <svg>
+                <circle cx="70" cy="70" r="70"></circle>
+                <circle cx="70" cy="70" r="70"></circle>
+              </svg>
+              <div class="number">
+                <div>
+                  <img src="../static/icons/ant-design.svg" alt="Ant Design" />
+                </div>
+                <p>Ant Design</p>
+              </div>
+            </div>
+          </div>
+          <div class="skills-card">
+            <div class="percent" style="--clr: #333; --angle: 75">
+              <div class="dot"></div>
+              <svg>
+                <circle cx="70" cy="70" r="70"></circle>
+                <circle cx="70" cy="70" r="70"></circle>
+              </svg>
+              <div class="number">
+                <div><img src="../static/icons/UX.svg" alt="UI/UX" /></div>
+                <p>UI/UX</p>
+              </div>
+            </div>
+          </div>
+          <div class="skills-card">
+            <div class="percent" style="--clr: #f24e1e; --angle: 73">
+              <div class="dot"></div>
+              <svg>
+                <circle cx="70" cy="70" r="70"></circle>
+                <circle cx="70" cy="70" r="70"></circle>
+              </svg>
+              <div class="number">
+                <div><img src="../static/icons/figma.svg" alt="Figma" /></div>
+                <p>Figma</p>
               </div>
             </div>
           </div>
