--- a/template/projects.html
+++ b/template/projects.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rakesh Soni | Home</title>
     <link rel="stylesheet" href="../static/styles/style.css" />
-    <link rel="stylesheet" href="../static/styles/projects.css">
+    <link rel="stylesheet" href="../static/styles/projects.css" />
   </head>
   <body>
     <!-- Navbar -->
@@ -29,13 +29,51 @@
       <section class="project-section">
         <h2>My Projects</h2>
         <div class="projects-wrapper">
-          <a class="project-card" target="_blank" href="https://www.figma.com/proto/6sQm9W9ZTCg1Ul1NnZihCV/Bazarpur-Services?page-id=0%3A1&node-id=4%3A68&starting-point-node-id=4%3A68&scaling=scale-down">
+          <a
+            class="project-card"
+            target="_blank"
+            href="https://github.com/Rakeshsoni7296/swiftCart"
+          >
             <div class="project-cat-img">
               <div class="project-cat">E-commerce</div>
-              <div><img src="../static/imgs/bazarpur.jpg" alt="E-commerce"></div>
+              <div>
+                <img src="../static/imgs/swiftCart.jpg" alt="E-commerce" />
+              </div>
+            </div>
+            <div class="project-output">Web Development</div>
+            <div class="prj-desc">
+              A single vendor e-commerce website for order management and
+              processing with payment gateway integration
+            </div>
+            <div class="start-date">
+              <div>Start Date</div>
+              <div>24 June, 2023</div>
+            </div>
+            <div class="prj-status">
+              <div>Status</div>
+              <div class="done">Completed</div>
+            </div>
+            <div class="project-tech">
+              <div>Technology</div>
+              <div>Design</div>
+            </div>
+          </a>
+          <a
+            class="project-card"
+            target="_blank"
+            href="https://www.figma.com/proto/6sQm9W9ZTCg1Ul1NnZihCV/Bazarpur-Services?page-id=0%3A1&node-id=4%3A68&starting-point-node-id=4%3A68&scaling=scale-down"
+          >
+            <div class="project-cat-img">
+              <div class="project-cat">E-commerce</div>
+              <div>
+                <img src="../static/imgs/bazarpur.jpg" alt="E-commerce" />
+              </div>
             </div>
             <div class="project-output">UI/UX Design</div>
-            <div class="prj-desc">A hyper-local e-commerce business model based website to represent local market virtually.</div>
+            <div class="prj-desc">
+              A hyper-local e-commerce business model based website to represent
+              local market virtually.
+            </div>
             <div class="start-date">
               <div>Start Date</div>
               <div>16 Apr, 2021</div>
@@ -49,13 +87,20 @@
               <div>Design</div>
             </div>
           </a>
-          <a class="project-card" target="_blank" href="https://github.com/Rakeshsoni7296/Waymore.git">
+          <a
+            class="project-card"
+            target="_blank"
+            href="https://github.com/Rakeshsoni7296/Waymore.git"
+          >
             <div class="project-cat-img">
               <div class="project-cat">Blog</div>
-              <div><img src="../static/imgs/waymore.jpg" alt="Blog"></div>
+              <div><img src="../static/imgs/waymore.jpg" alt="Blog" /></div>
             </div>
             <div class="project-output">Web Development</div>
-            <div class="prj-desc">A Beautiful website for content creators and daily readers to deliver thoughts among each other.</div>
+            <div class="prj-desc">
+              A Beautiful website for content creators and daily readers to
+              deliver thoughts among each other.
+            </div>
             <div class="start-date">
               <div>Start Date</div>
               <div>09 May, 2022</div>
@@ -69,13 +114,22 @@
               <div>MERN</div>
             </div>
           </a>
-          <a class="project-card" target="_blank" href="https://www.figma.com/proto/8SLmhQhKEmUG1gEKBptE3u/GyanDaan-Project?page-id=0%3A1&node-id=21%3A111&starting-point-node-id=21%3A111&scaling=scale-down">
+          <a
+            class="project-card"
+            target="_blank"
+            href="https://www.figma.com/proto/8SLmhQhKEmUG1gEKBptE3u/GyanDaan-Project?page-id=0%3A1&node-id=21%3A111&starting-point-node-id=21%3A111&scaling=scale-down"
+          >
             <div class="project-cat-img">
               <div class="project-cat">Education</div>
-              <div><img src="../static/imgs/career-path.jpg" alt="Education"></div>
+              <div>
+                <img src="../static/imgs/career-path.jpg" alt="Education" />
+              </div>
             </div>
             <div class="project-output">UI/UX Design</div>
-            <div class="prj-desc">A platform to deliver knowledge volunteerly to the deserving students who can't afford paid courses.</div>
+            <div class="prj-desc">
+              A platform to deliver knowledge volunteerly to the deserving
+              students who can't afford paid courses.
+            </div>
             <div class="start-date">
               <div>Start Date</div>
               <div>13 Feb, 2022</div>
@@ -89,13 +143,20 @@
               <div>Design</div>
             </div>
           </a>
-          <a class="project-card" target="_blank" href="https://forkify-software-engineering.netlify.app/">
+          <a
+            class="project-card"
+            target="_blank"
+            href="https://forkify-software-engineering.netlify.app/"
+          >
             <div class="project-cat-img">
               <div class="project-cat">Food</div>
-              <div><img src="../static/imgs/forkify.jpg" alt="Food"></div>
+              <div><img src="../static/imgs/forkify.jpg" alt="Food" /></div>
             </div>
             <div class="project-output">Web Development</div>
-            <div class="prj-desc">A website for representing different types of recipes and their ingredients with quantity.</div>
+            <div class="prj-desc">
+              A website for representing different types of recipes and their
+              ingredients with quantity.
+            </div>
             <div class="start-date">
               <div>Start Date</div>
               <div>24 May, 2021</div>
@@ -109,13 +170,20 @@
               <div>Javascript</div>
             </div>
           </a>
-          <a class="project-card" target="_blank" href="https://www.figma.com/proto/OV8wBlCiFR8bnFy8RgiZnw/Untitled?page-id=0%3A1&node-id=17%3A0">
+          <a
+            class="project-card"
+            target="_blank"
+            href="https://www.figma.com/proto/OV8wBlCiFR8bnFy8RgiZnw/Untitled?page-id=0%3A1&node-id=17%3A0"
+          >
             <div class="project-cat-img">
               <div class="project-cat">Logistics</div>
-              <div><img src="../static/imgs/uma.jpg" alt="Logistics"></div>
+              <div><img src="../static/imgs/uma.jpg" alt="Logistics" /></div>
             </div>
             <div class="project-output">UI/UX Design</div>
-            <div class="prj-desc">A platform to deliver goods between cities with facility of tracking status and logistics management.</div>
+            <div class="prj-desc">
+              A platform to deliver goods between cities with facility of
+              tracking status and logistics management.
+            </div>
             <div class="start-date">
               <div>Start Date</div>
               <div>27 Jun, 2021</div>
@@ -129,13 +197,20 @@
               <div>Design</div>
             </div>
           </a>
-          <a class="project-card" target="_blank" href="https://mapty.netlify.app/">
+          <a
+            class="project-card"
+            target="_blank"
+            href="https://mapty.netlify.app/"
+          >
             <div class="project-cat-img">
               <div class="project-cat">Health</div>
-              <div><img src="../static/imgs/mapty.jpg" alt="Health"></div>
+              <div><img src="../static/imgs/mapty.jpg" alt="Health" /></div>
             </div>
             <div class="project-output">Web Development</div>
-            <div class="prj-desc">A map view to store daily cycling or running activity to check daily calories burning process.</div>
+            <div class="prj-desc">
+              A map view to store daily cycling or running activity to check
+              daily calories burning process.
+            </div>
             <div class="start-date">
               <div>Start Date</div>
               <div>09 Aug, 2021</div>
@@ -149,13 +224,20 @@
               <div>Javascript</div>
             </div>
           </a>
-          <a class="project-card" target="_blank" href="https://www.figma.com/proto/DGMstxtkzYjIHdSkg4EmDB/Way-More?page-id=0%3A1&node-id=5%3A272&starting-point-node-id=5%3A272">
+          <a
+            class="project-card"
+            target="_blank"
+            href="https://www.figma.com/proto/DGMstxtkzYjIHdSkg4EmDB/Way-More?page-id=0%3A1&node-id=5%3A272&starting-point-node-id=5%3A272"
+          >
             <div class="project-cat-img">
               <div class="project-cat">Blog</div>
-              <div><img src="../static/imgs/waymore2.jpg" alt="Blog"></div>
+              <div><img src="../static/imgs/waymore2.jpg" alt="Blog" /></div>
             </div>
             <div class="project-output">UI/UX Design</div>
-            <div class="prj-desc">A platform to engage people to learn, read and write for having an excitement in their busy schedule.</div>
+            <div class="prj-desc">
+              A platform to engage people to learn, read and write for having an
+              excitement in their busy schedule.
+            </div>
             <div class="start-date">
               <div>Start Date</div>
               <div>17 Sep, 2021</div>
@@ -169,13 +251,20 @@
               <div>Design</div>
             </div>
           </a>
-          <a class="project-card" target="_blank" href="https://www.figma.com/proto/s9wCJ3PQuSqW1s5ArACwgs/Untitled?page-id=0%3A1&node-id=1%3A2">
+          <a
+            class="project-card"
+            target="_blank"
+            href="https://www.figma.com/proto/s9wCJ3PQuSqW1s5ArACwgs/Untitled?page-id=0%3A1&node-id=1%3A2"
+          >
             <div class="project-cat-img">
               <div class="project-cat">Food</div>
-              <div><img src="../static/imgs/knife-fork.jpg" alt="Food"></div>
+              <div><img src="../static/imgs/knife-fork.jpg" alt="Food" /></div>
             </div>
             <div class="project-output">UI/UX Design</div>
-            <div class="prj-desc">Landing page for a demo Restaurant website Knife and fork offering meal with a nice user interface.</div>
+            <div class="prj-desc">
+              Landing page for a demo Restaurant website Knife and fork offering
+              meal with a nice user interface.
+            </div>
             <div class="start-date">
               <div>Start Date</div>
               <div>30 Jul, 2021</div>
