minor changes done

--- a/template/projects.html
+++ b/template/projects.html
@@ -80,7 +80,7 @@
             </div>
             <div class="prj-status">
               <div>Status</div>
-              <div class="run">Running</div>
+              <div class="done">completed</div>
             </div>
             <div class="project-tech">
               <div>Technology</div>
@@ -107,7 +107,7 @@
             </div>
             <div class="prj-status">
               <div>Status</div>
-              <div class="run">Running</div>
+              <div class="run">Uncompleted</div>
             </div>
             <div class="project-tech">
               <div>Technology</div>
